--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,28 +1,24 @@
-{% set name = "python-cpl" %}
 {% set version = "0.7.2" %}
-{% set hash_type = "sha256" %}
-{% set hash_value = "02139d6f3fbaaa29bfe9a1e6b247bd41b7423eacfa40c02ca441eb0560475cfb" %}
 
 package:
-  name: '{{ name|lower }}'
-  version: '{{ version }}'
+  name: python-cpl
+  version: {{ version }}
 
 source:
-  fn: '{{ name }}-{{ version }}.tar.gz'
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  '{{ hash_type }}': '{{ hash_value }}'
+  url: https://pypi.io/packages/source/p/python-cpl/python-cpl-{{ version }}.tar.gz
+  sha256: 02139d6f3fbaaa29bfe9a1e6b247bd41b7423eacfa40c02ca441eb0560475cfb
 
 build:
-  number: 1001
-  script: {{ PYTHON }} -m pip install . --no-deps -vv
+  number: 1002
   skip: true  # [win]
+  script: "{{ PYTHON }} -m pip install . --no-deps -vv"
 
 requirements:
   build:
     - {{ compiler('c') }}
   host:
     - python
-    - setuptools
+    - pip
   run:
     - python
     - astropy
@@ -33,7 +29,8 @@ test:
 
 about:
   home: https://pypi.python.org/pypi/python-cpl
-  license: GPLv2+
+  license: GPL-2.0+
+  license_file: COPYING
   license_family: GPL2
   summary: Python interface for the ESO Common Pipeline Library
   description: |
