--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -35,6 +35,7 @@ about:
   home: https://pypi.python.org/pypi/python-cpl
   license: GPLv2+
   license_family: GPL2
+  license_file: COPYING
   summary: Python interface for the ESO Common Pipeline Library
   description: |
     This module can list, configure and execute CPL-based recipes from Python
