--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -33,7 +33,7 @@ test:
 
 about:
   home: https://pypi.python.org/pypi/python-cpl
-  license: GPLv2+
+  license: GPL-2.0-or-later
   license_family: GPL2
   license_file: COPYING
   summary: Python interface for the ESO Common Pipeline Library
