--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,7 +14,7 @@ source:
 
 build:
   number: 0
-  script: python setup.py install
+  script: "{{ PYTHON }} -m pip install . -vv"
   skip: true  # [win]
 
 requirements:
@@ -23,6 +23,7 @@ requirements:
   host:
     - python
     - setuptools
+    - pip
   run:
     - python
     - astropy
